quick attempt at fixing phantom scrollbar on modal

--- a/web/src/components/Footer/Footer.module.scss
+++ b/web/src/components/Footer/Footer.module.scss
@@ -11,7 +11,7 @@ a {
 
 .footer-background {
   
-  width: 100vw;
+  // width: 100vw;
   padding-top: 10rem;
   padding-bottom: 5rem;
   background-color: $brand-color2;
